syntax = "proto3";

package hwscDocumentSvc;

import "document.proto";

option go_package = "hwscDocumentSvcPb";

service DocumentService {
    rpc GetStatus (DocumentRequest) returns (DocumentResponse) {}
    rpc CreateDocument (DocumentRequest) returns (DocumentResponse) {}
    rpc ListUserDocumentCollection (DocumentRequest) returns (DocumentResponse) {}
    rpc UpdateDocument (DocumentRequest) returns (DocumentResponse) {}
    rpc DeleteDocument (DocumentRequest) returns (DocumentResponse) {}
    rpc AddFileMetadata (DocumentRequest) returns (DocumentResponse) {}
    rpc DeleteFileMetadata (DocumentRequest) returns (DocumentResponse) {}
    rpc ListDistinctFieldValues (DocumentRequest) returns (DocumentResponse) {}
    rpc QueryDocument (DocumentRequest) returns (DocumentResponse) {}
}


message DocumentRequest {
    hwsc.Document data = 1;

    // Request for AddFileMetadata & DeleteFileMetadata
    hwsc.FileMetadataTransaction fileMetadata_parameters = 2;

    // Request for QueryDocument
    hwsc.QueryTransaction query_parameters = 3;
}

message DocumentResponse {
    oneof status { uint32 code = 1; }
    string message = 2;
    hwsc.Document data = 3;

    // Response for ListUserDocumentCollection
    // Response for QueryDocument
    repeated hwsc.Document document_collection = 4;

    // Response for ListDistinctFieldValues
    hwsc.QueryTransaction query_results = 5;
}
